--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
     const opt = {
         renderMode: 'auto',//'auto' or 'pc' or 'mobile'
-        buttonOffWhenOpenFrame: false,//
+        buttonOffWhenOpenFrame: false,//only for pc mode
         bot: {
             wakeupText: null,//user input which is automatically send to server on startup
             botPhoto: null,//URL of bot photo image
