--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         buttonOffWhenOpenFrame: false,//only for pc mode
         bot: {
             wakeupText: null,//user input which is automatically send to server on startup
-            botPhoto: null,//URL of bot photo image
+            botPhoto: 'https://riversun.github.io/img/riversun_144.png',//URL of bot photo image
             humanPhoto: null,//URL of human photo image
             widget: {
                 sendLabel: 'SEND',
